--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"ffmpeg-static": "^4.4.1",
 		"ms": "^2.1.3",
 		"opusscript": "^0.0.8",
+		"pretty-ms": "^7.0.1",
 		"ytdl-core": "^4.11.0"
 	}
 }
