--- a/config.json
+++ b/config.json
@@ -34,7 +34,7 @@
 		"maxVol": 100,
 		"loopMessage": false,
 		"autoShuffle": true,
-		"imgURL": "https://i.imgur.com/P7bPbjJ.png",
+		"imgURL": "https://i.imgur.com/WPwVlOe.png",
 		"discordPlaylist": "https://music.youtube.com/playlist?list=PL_B-RcGYprJ5NtqoFgJyDIqEcg4yuO8Ld&feature=share",
 		"editPlaylist": "https://music.youtube.com/playlist?list=PL_B-RcGYprJ5NtqoFgJyDIqEcg4yuO8Ld&jct=qYv0g6nxbIb8CoO0cRFUTC49lJWZGQ",
 		"DJ": {
