--- a/config.json
+++ b/config.json
@@ -36,7 +36,7 @@
 		"autoShuffle": true,
 		"imgURL": "https://i.imgur.com/WPwVlOe.png",
 		"adityaPlaylist": "https://music.youtube.com/playlist?list=PL_B-RcGYprJ5NtqoFgJyDIqEcg4yuO8Ld&feature=share",
-		"sushantPlaylist": "",
+		"sushantPlaylist": "https://music.youtube.com/playlist?list=PL6tMxNF_Dd7A3XHqjq5QZ8-knO62zf1UU&feature=share",
 		"DJ": {
 			"enabled": false,
 			"roleName": "🎛️┃DJ",
