--- a/config.json
+++ b/config.json
@@ -21,6 +21,7 @@
 			"Counter-Strike: Global Offensive": "💣┃CS:GO",
 			"Call of Duty®: Modern Warfare®": "🔫┃Call of Duty",
 			"Grand Theft Auto V": "👮┃GTA V",
+			"Fall Guys": "🌠┃Fall Guys",
 			"Rainbow Six Siege": "🌈┃Rainbow Six Siege",
 			"Tom Clancy's Rainbow Six Siege": "🌈┃Rainbow Six Siege",
 			"VALORANT": "🧝┃Valorant",
