--- a/package.json
+++ b/package.json
@@ -13,19 +13,14 @@
 	"author": "theadisingh",
 	"license": "ISC",
 	"dependencies": {
-		"@discordjs/builders": "^0.12.0",
-		"@discordjs/rest": "^0.3.0",
 		"canvas": "^2.8.0",
 		"chalk": "^4.1.0",
-		"discord-api-types": "^0.26.1",
-		"discord-player": "^5.2.2",
-		"discord-together": "^1.3.3",
-		"discord.js": "^13.3.1",
+		"discord-player": "^5.3.1",
+		"discord.js": "^14.1.2",
 		"dotenv": "^16.0.0",
-		"ffmpeg-static": "^4.4.1",
+		"ffmpeg-static": "^5.0.2",
 		"ms": "^2.1.3",
 		"opusscript": "^0.0.8",
-		"pretty-ms": "^7.0.1",
-		"ytdl-core": "^4.11.0"
+		"pretty-ms": "^7.0.1"
 	}
 }
